[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylgate"
description = "PalGate automation using Python"
requires-python = ">=3.9"
authors = [
    { name = "DonutByte" }
]
license-files = ["LICENSE"]
readme = "README.rst"
dynamic = ["version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["palgate", "python", "automation"]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/DonutByte/pylgate"
"Bug Tracker" = "https://github.com/DonutByte/pylgate/issues"
"Source Code" = "https://github.com/DonutByte/pylgate"

[dependency-groups]
tests = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "httpx==0.28.1",
]

[tool.hatch.version]
path = "pylgate/__init__.py"